<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5891836101673362/8926080338</string>
    <string name="ads_application_id" translatable="false">ca-app-pub-5891836101673362~4534736733</string>
    <string name="ads_publisher_id" translatable="false">pub-5891836101673362</string>
    <string name="privacy_policy_url" translatable="false">https://sergiocrz.wordpress.com/privacy-policy/</string>
    <string name="app_name" translatable="false">Primes Free</string>
    <string name="app_version_name" translatable="false">3.0</string>
    <string name="app_long_description">Prime Number Tools Free v</string>
    <string name="app_version_description">App version:</string>
    <string name="app_version_date">February 2017</string>
    <string name="app_long_description_PRO" translatable="false">Prime Number Tools PRO</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_mmc">LCM</string>
    <string name="nav_mdc">GCD</string>
    <string name="nav_fatorizar">Factorize</string>
    <string name="nav_divisores">Divisors</string>
    <string name="nav_primes_table">Primes Table Generator</string>
    <string name="nav_sendmail">Send e-mail</string>
    <string name="nav_share">Share</string>
    <string name="nav_about_us">About this App</string>
    <string name="mdc_result_prefix">GCD(</string>
    <string name="mmc_result_prefix">LCM(</string>
    <string-array name="nav_item_activity_titles">
        <item>@string/app_inicio</item>
        <item>@string/mmc</item>
        <item>@string/mdc</item>
        <item>@string/factorize</item>
        <item>@string/divisors</item>
        <item>@string/tabela_primos</item>
        <item>@string/nav_primorial</item>
    </string-array>
    <string name="app_email" translatable="false">mailto:sergiocrz@gmail.com</string>
    <string name="has_email">Do you have an email APP installed?</string>
    <string name="action_ajuda_divisores">How to obtain divisors?</string>
    <string name="action_ajuda_fatorizar">How to factorize a number?</string>
    <string name="action_ajuda_mdc">How to calculate GCD?</string>
    <string name="action_ajuda_mmc">How to calculate LCM?</string>
    <string name="action_clear_all_history">Delete history</string>
    <string name="action_clear_result">Delete</string>
    <string name="action_clipboard_result">Copy text</string>
    <string name="action_share_history">Share results</string>
    <string name="action_share_result">Share...</string>
    <string name="activity_title_about_us">About</string>
    <string name="activity_title_send_mail">Send e-mail</string>
    <string name="activity_title_share">Share</string>
    <string name="add_num_inteiro">Enter an integer</string>
    <string name="add_number_pair">Enter at least one pair of integers</string>
    <string name="_incomplete_calc">Incomplete calculation…</string>
    <string name="_numero_primo">Prime number</string>
    <string name="calculate">Calculate</string>
    <string name="canceled_op">Operation canceled.</string>
    <string name="divisores_">divisors:</string>
    <string name="divisors_of">Divisors of</string>
    <string name="gerar">Generate</string>
    <string name="has">has</string>
    <string name="help_text_divisores"> Divisors of a natural number are all natural numbers which, when dividing such number, will result in an exact division, that is, with a remainder equal to zero.\n The set of divisors of a number is a finite set. In order to find such divisors, we use factorization or decomposition in prime factors.\n  We multiply each of the factors of the decomposition by the number 1 and its successive results, not repeating the same results.\n To obtain the number of divisors of a natural number we multiply all the exponents of the resulting factorization after adding one unit to each exponent.\nBy definition, prime numbers are numbers belonging to the set of nonzero natural numbers, which have exactly two distinct natural divisors: the number 1 and the number itself, whose division will be exact with remainder equal to zero.</string>
    <string name="help_text_fatores"> The decomposition of a natural number into a product of prime factors is called factorization.\n The factorization of any prime number will result in the number itself because these are not factorizable. In factorization the same prime factor can occur more than once. When this happens we represent the factor in the form of a power whose exponent is the number of occurrences of such factor and the basis is the factor itself.\n To perform the decomposition of a number into a product of prime factors, we must look for the lowest prime number able to divide it into an exact division (remainder of the division equal to zero) and divide it by this number as long as possible. \n Then we must look for the next prime number able to divide it and continue in this procedure until the quotient of the division results in 1. At this moment we will have all the prime factors that compose such number.</string>
    <string name="help_text_mdc">Divisor is a nonzero natural number, which, when dividing another natural number, produces a division with remainder equal to zero, that is, produces an exact division.In this sense, the set of numbers formed by the divisors of any natural number is a finite set.\n If the number 1 is the only divisor common to a set of natural numbers, we say that the numbers of this set are relatively prime or also called coprimes.\n  A practical method for determining the GCD of a group of natural numbers is to determine the set of divisors of each number and to check which is the largest value common to all sets, this will be the Greates Common Divisor.\n Another method for GCD determination is through factorization. The GCD will be the product of common factors with lower exponent.</string>
    <string name="help_text_mmc"> Given two or more non-zero natural numbers, the least common multiple (LCM) is the lowest of its multiples which is common to all of them, except for zero which is the lowest of the natural numbers and is a multiple of all of them. \n  The multiples of a natural number are all those that divide by this number have zero as the rest of the division.\n  The multiples of a natural number are the result of the product of this number by another natural number.\n  Since the set of natural numbers is an infinite set, the multiples of a number are also infinite. \n  A practical method for determining the LCM of a set of natural numbers is the decomposition into prime factors.\n  LCM is the product of common and not common factors, with the greatest exponents. </string>
    <string name="maiores_qzero">Numbers larger than zero.</string>
    <string name="nao">No</string>
    <string name="number_in_field">Number in field</string>
    <string name="numero_alto">Number is too high</string>
    <string name="primos_si">Relatively prime numbers</string>
    <string name="send_it">Send e-mail?</string>
    <string name="sim">Yes</string>
    <string name="too_high">too high</string>
    <string name="zero_no_divisores">Divisors of zero are all natural numbers greater than zero.</string>
    <string name="desenvolvido_por">Developed by Sérgio C.</string>
    <string name="about_app_description">- Calculation of the Least Common Multiple (LCM) between up to 8 numbers with detailed color explanations (PRO version)\n - Calculation of the Greatest Common Divisor (GCD) between up to 8 numbers with detailed color explanations (PRO version)\n - Factorization in Prime Numbers with detailed color explanations\n - Determine if a number is prime or also called Primality test\n - Determine whether one or more numbers are relatively prime through GCD\n - Calculate all divisors of an integer\n - Prime number table generator in a given range\n - Total prime numbers in range\n - Calculate Primorial of a number n#</string>
    <string name="send_comment">Send suggestion, improvement or comment</string>
    <string name="send">Send</string>
    <string name="calculate_divisors_title">Calculate the divisors of a number</string>
    <string name="introduzir_numero">Insert number…</string>
    <string name="fatorize_title">Prime number factorization</string>
    <string name="fatorizar_btn">Factorize</string>
    <string name="home_mmc_description">▸LCM - Calculate the Least Common Multiple between two or more numbers</string>
    <string name="home_mdc_description">▸GCD - Calculate the Greatest Common Divisor between two or more numbers\n▸Determine if the numbers are relatively primes</string>
    <string name="home_factorize_description">▸Factorize - Decompose a number into prime factors\n▸Check if a number is prime/Primality test</string>
    <string name="home_divisors_description">▸Divisors - Calculate all divisors of an integer\n▸Check if a number is prime</string>
    <string name="home_primetable_description">▸Prime numbers table generator for a given range\n▸Total of prime numbers in the range</string>
    <string name="app_inicio">Primes Free - Home</string>
    <string name="divisors">Divisors</string>
    <string name="factorize">Factorize number</string>
    <string name="mdc">GCD</string>
    <string name="mmc">LCM</string>
    <string name="tabela_primos">Prime numbers table</string>
    <string name="mdc_title">GCD - Greatest Common Divisor</string>
    <string name="mmc_title">LCM - Least Common Multiple</string>
    <string name="primetable_title">Prime Number Table Generator</string>
    <string name="mostrar_todos">Show All </string>
    <string name="valor_maximo">Highest Value</string>
    <string name="valor_minimo">Lowest Value</string>
    <string name="history_deleted">History of results deleted</string>
    <string name="nothing_toshare">No results to share</string>
    <string name="mdc_description">Greatest Common Divisor</string>
    <string name="mais">More</string>
    <string name="mmc_description">Least Common Multiple</string>
    <string name="inicio">Start</string>
    <string name="fatorizcao">Factorize</string>
    <string name="divisores_number">Divisors of a number</string>
    <string name="copied_toclipboard">Copied to clipboard</string>
    <string name="already_inclipboard">Result already in clipboard</string>
    <string name="send_mail_contact">Send e-mail / Contact</string>
    <string name="working">Working…</string>
    <string name="canceled_noprimes">Operation canceled. No prime numbers were found in the range.</string>
    <string name="existem">There are</string>
    <string name="factorization_of">Factorization of</string>
    <string name="fill_min_max">Fill in both lowest and highest values</string>
    <string name="found">Found</string>
    <string name="action_save_image">Save image</string>
    <string name="action_settings">Preferences</string>
    <string name="performance">Performance:</string>
    <string name="pref_colors_title">Show colors</string>
    <string name="pref_description_colors">Display distinct colors for easy explanations (PRO version only)</string>
    <string name="pref_description_explanation">Select when to present explanations of the calculations: Always, when asked or never.</string>
    <string name="pref_description_performance">Display CPU runtime after calculation (PRO version only)</string>
    <string name="pref_perform_title">Show performance</string>
    <string name="pref_title_explanation">Show explanations</string>
    <string name="cardinal_primos"># of primes:</string>
    <string name="nav_primorial">Calculate Primorial n#</string>
</resources>