<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/settings_textview">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:icon="@mipmap/ic_info"
        android:defaultValue="0"
        android:entries="@array/pref_list_titles"
        android:entryValues="@array/pref_list_values"
        android:key="pref_show_explanation"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_explanation"
        android:summary="@string/pref_description_explanation"
        />
        <CheckBoxPreference
            android:icon="@mipmap/ic_colors"
            android:title="@string/pref_colors_title"
            android:summary="@string/pref_description_colors"
            android:key="pref_show_colors"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:icon="@mipmap/ic_performance"
            android:title="@string/pref_perform_title"
            android:summary="@string/pref_description_performance"
            android:key="pref_show_performance"
            android:defaultValue="true"
            />

</PreferenceCategory>
</PreferenceScreen>
