<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/llPopup"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_popup_style"
              android:orientation="vertical"
              android:paddingLeft="8dp"
              android:paddingRight="16dp"
              android:paddingTop="8dp"
              android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/action_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:src="@mipmap/menu_copy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:text="@string/action_clipboard_result"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_save_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:src="@mipmap/menu_save"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:text="@string/action_save_image"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_clear_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:src="@mipmap/menu_delete"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:text="@string/action_clear_result"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_share_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:src="@mipmap/menu_share"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="11dp"
            android:text="@string/action_share_result"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"/>

    </LinearLayout>


</LinearLayout>